fix(EntityList): prevent item overflow for very long title

--- a/client/src/modules/components/EntityList/ListItem.scss
+++ b/client/src/modules/components/EntityList/ListItem.scss
@@ -39,6 +39,7 @@
     color: inherit;
     text-decoration: none;
     flex-grow: 1;
+    min-width: 0;
 
     > .Icon {
       flex: 0 0 24px;
